# databricks-code-assist

./: .gitignore  README.md  pyproject.toml
.hive-mind/sessions/: hive-mind-prompt-hive-1770954789063.txt
app/: README.md  setup.sh
app/backend/: main.py
app/frontend/: package.json
app/frontend/public/: index.html  manifest.json
app/frontend/src/: App.css  App.js
app/frontend/src/components/: Footer.css  Footer.js  Header.css  Header.js
app/frontend/src/pages/: About.css  About.js  Home.css  Home.js
config/: aider-config.template.yml  claude-code-litellm.template.yaml  continue-config.template.yaml  litellm_config.template.yaml
databricks_code_assist/: __init__.py  cli.py  config.py
scripts/: claude-code-hybrid.sh  setup_aider.sh  setup_claude_code.sh  setup_claude_code_hybrid.sh  thinking_filter_proxy.py
