[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "databricks-code-assist"
version = "0.1.0"
description = "CLI tool for setting up AI coding assistants with Databricks LLMs"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["databricks", "llm", "aider", "continue", "coding-assistant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "click>=8.0",
    "litellm[proxy]>=1.0",
    "pyyaml>=6.0",
    "requests>=2.25",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
]
aider = [
    "aider-chat>=0.50",
]

[project.scripts]
databricks-code-assist = "databricks_code_assist.cli:main"

[project.urls]
Homepage = "https://github.com/databricks/databricks-code-assist"
Documentation = "https://github.com/databricks/databricks-code-assist#readme"
Repository = "https://github.com/databricks/databricks-code-assist"

[tool.setuptools.packages.find]
where = ["."]
include = ["databricks_code_assist*"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]
